<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/zfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/rg"
        >
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <RadioButton
            android:id="@+id/rb1"
            style="@style/AppGroup"
            android:drawableTop="@drawable/group"
            android:text="@string/app_home"
            android:textColor="@drawable/dibu"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb2"
            style="@style/AppGroup"
            android:drawableTop="@drawable/group1"
            android:text="@string/app_class"
            android:textColor="@drawable/dibu"
            />
        <RadioButton
            android:id="@+id/rb3"
            style="@style/AppGroup"
            android:drawableTop="@drawable/group2"
            android:text="@string/app_cart"
            android:textColor="@drawable/dibu"
            />
        <RadioButton
            android:id="@+id/rb4"
            style="@style/AppGroup"
            android:drawableTop="@drawable/group3"
            android:text="@string/app_user"
            android:textColor="@drawable/dibu"
            />
    </RadioGroup>
</RelativeLayout>