<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lv.mama.lv.mine.Deng.SettingActivity">
    <RelativeLayout
        android:id="@+id/setting_r1"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/presonal_tui"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_browser_nav_back"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/presonal_zi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sz"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/presonal_tui"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/presonal_duo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_action_more_hui"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/setting_r1"
        >
        <ImageView
            android:id="@+id/setting_top_toux"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_home_nav_user"
            android:layout_marginLeft="10dp"
            />
        <RelativeLayout
            android:id="@+id/setting_wenzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_top_toux"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:id="@+id/setting_top_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yonghumingtianxie"
                android:textSize="21dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/setting_top_hyh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_top_name"
                android:text="会员名："
                />
            <TextView
                android:id="@+id/setting_top_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_top_name"
                android:layout_toRightOf="@id/setting_top_hyh"
                android:text="yonghumingtianxie"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/s_h_rigth_1"
            style="@style/AppF4d_Sz_Jt"
            />
        <ImageView
            android:id="@+id/s_h_ewm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tb_icon_home_qrcode_normal_hui"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/s_h_rigth_1"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r3"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r2"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/shdz"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_shdz"
            />
        <ImageView
            android:id="@+id/s_h_rigth_2"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r4"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r3"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/zhaq"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_zhzq"
            />
        <ImageView
            android:id="@+id/s_h_rigth_3"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r5"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r4"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/dqsz"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_dqsz"
            />
        <ImageView
            android:id="@+id/s_h_rigth_4"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r6"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r5"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/yxtz"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_yxtz"
            />
        <ImageView
            android:id="@+id/s_h_rigth_5"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r7"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r6"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/ys"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_ys"
            />
        <ImageView
            android:id="@+id/s_h_rigth_6"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r8"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r7"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/ty"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_ty"
            />
        <ImageView
            android:id="@+id/s_h_rigth_7"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r9"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r8"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/xm"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_xm"
            />
        <ImageView
            android:id="@+id/s_h_rigth_8"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_r10"
        style="@style/AppF4d_Sz_xiangdui"
        android:layout_below="@id/setting_r9"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/sjtb"
            style="@style/AppF4d_Sz_wenzi"
            android:text="@string/setting_gysjtb"
            />
        <ImageView
            android:id="@+id/s_h_rigth_9"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/setting_tcdqzh"
        android:layout_alignParentBottom="true"
        android:background="@color/redAdd"
        android:textColor="@color/white"
        android:textSize="20dp"
        />

</RelativeLayout>
