<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lv.mama.lv.mine.Deng.PersonalActivity">
    <RelativeLayout
        android:id="@+id/presonal_r1"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/presonal_tui"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_browser_nav_back"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/presonal_zi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_zi1"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/presonal_tui"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/presonal_duo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_action_more_hui"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/presonal_r2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/presonal_r1"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/tbtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_tbtx"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/h_rigth_1"
            style="@style/AppF4d_Sz_Jt"
            />
        <ImageView
            android:id="@+id/tbtx_x"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_home_nav_user"
            android:layout_toLeftOf="@id/h_rigth_1"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/presonal_r3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/presonal_r2"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/hym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_hym"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/h_rhm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="weidengluqingdenglu"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/presonal_r4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/presonal_r3"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/tbnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_tbnc"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/h_rigth_3"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/presonal_r5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/presonal_r4"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        >
        <TextView
            android:id="@+id/ewm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_ewm"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/h_rigth_4"
            style="@style/AppF4d_Sz_Jt"
            />
        <ImageView
            android:id="@+id/h_ewm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tb_icon_home_qrcode_normal_hui"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/h_rigth_4"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/presonal_r6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/presonal_r5"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/xb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_xb"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/h_rigth_5"
            style="@style/AppF4d_Sz_Jt"
            />
    </RelativeLayout>
</RelativeLayout>
